--- a/cardgen.html
+++ b/cardgen.html
@@ -18,8 +18,13 @@
 				</select>
 				<textarea id="infoCardName" placeholder="Card Name" class="cardText cardName" rows="1"></textarea>
 				<textarea id="infoCardTypeVariant" placeholder="Card Variant (Vistor, Consumable, etc.)" class="cardText cardTypeVariant" rows="1"></textarea>
+				<div id="infoCardStats">
+					<input type="text" id="infoCardHP" placeholder="HP" class="cardText cardStat" maxlength="4">
+					<input type="text" id="infoCardStatuses" placeholder="Stat1, Stat2">
+					<input type="text" id="infoCardDMG" placeholder="DMG" class="cardText cardStat" maxlength="4">
+				</div>
 				<textarea id="infoCardDesc" placeholder="Card Description" class="cardText cardDesc" rows="9"></textarea>
-				<textarea id="infoCardComment" placeholder="Card Comment" class="cardText cardComment" rows="1"></textarea>
+				<textarea id="infoCardComment" placeholder="Card Comment" class="cardText cardComment" rows="2"></textarea>
 				<div>
 					<input type="checkbox" checked id="optionAutoHighlightDesc">
 					<label for="optionAutoHighlightDesc">Auto highlight card description?</label><br>
@@ -29,6 +34,9 @@
 			<div id="renderCard" class="cardSized">
 				<p id="renderCardName" class="cardText textOutline cardName"></p>
 				<p id="renderCardTypeVariant" class="cardText textOutline cardTypeVariant"></p>
+				<p id="renderCardHP" class="cardText textOutline cardStat"></p>
+				<p id="renderCardDMG" class="cardText textOutline cardStat"></p>
+				<div id="renderCardStatuses"></div>
 				<p id="renderCardDesc" class="cardText textOutline cardDesc"></p>
 				<p id="renderCardComment" class="cardText textOutline cardComment"></p>
 			</div>
