Letterbox HP/DMG icons, add isCharacter checkbox

--- a/cardgen.html
+++ b/cardgen.html
@@ -29,6 +29,10 @@
 					<input type="checkbox" checked id="optionAutoHighlightDesc">
 					<label for="optionAutoHighlightDesc">Auto highlight card description?</label><br>
 				</div>
+				<div>
+					<input type="checkbox" checked id="optionIsCharacter">
+					<label for="optionIsCharacter">Is character card? (Has stats)</label><br>
+				</div>
 				<button id="btnMakeCard">Make Card</button>
 			</div>
 			<div id="renderCard" class="cardSized">
